	PR debug/41340 	* loop-invariant.c (calculate_loop_reg_pressure): Don't count regs 	referenced just in DEBUG_INSNs.

* gcc.dg/pr41340.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@153011 138bc75d-0d04-0410-961f-82ee72b054a4